BUG: fix css bugs on mobile

--- a/static/styles/includes/headers.less
+++ b/static/styles/includes/headers.less
@@ -83,7 +83,7 @@ a {
   height: @header-height;
   position: absolute;
   padding: 0px 20px;
-  min-width: 800px;
+  min-width: 930px;
   top: 0;
   left: 0;
   right: 0;
@@ -95,7 +95,7 @@ a {
   border-bottom: 1px solid @white-border;
 }
 .header-nav-links {
-  margin-right: 120px;
+  margin-right: 60px;
   float: right;
 }
 .header-nav-list {
